; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libfat/extr_fatfile.c__FAT_ftruncate_r.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libfat/extr_fatfile.c__FAT_ftruncate_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._reent = type { i8* }
%struct.TYPE_10__ = type { i32, i64, i32, i32, %struct.TYPE_11__, i64, %struct.TYPE_11__, %struct.TYPE_9__*, i32, i32 }
%struct.TYPE_11__ = type { i32, i32, i32 }
%struct.TYPE_9__ = type { i32, i32, i32, i32 }

@EINVAL = common dso_local global i8* null, align 8
@FILE_MAX_SIZE = common dso_local global i64 0, align 8
@EFBIG = common dso_local global i8* null, align 8
@EBADF = common dso_local global i8* null, align 8
@CLUSTER_FREE = common dso_local global i64 0, align 8
@ENOSPC = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_FAT_ftruncate_r(%struct._reent* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct._reent*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.TYPE_10__*, align 8
  %9 = alloca %struct.TYPE_9__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_11__, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store %struct._reent* %0, %struct._reent** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = bitcast i8* %17 to %struct.TYPE_10__*
  store %struct.TYPE_10__* %18, %struct.TYPE_10__** %8, align 8
  store i32 0, i32* %10, align 4
  %19 = load i64, i64* %7, align 8
  %20 = trunc i64 %19 to i32
  store i32 %20, i32* %11, align 4
  %21 = load i64, i64* %7, align 8
  %22 = icmp slt i64 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %3
  %24 = load i8*, i8** @EINVAL, align 8
  %25 = load %struct._reent*, %struct._reent** %5, align 8
  %26 = getelementptr inbounds %struct._reent, %struct._reent* %25, i32 0, i32 0
  store i8* %24, i8** %26, align 8
  store i32 -1, i32* %4, align 4
  br label %246

27:                                               ; preds = %3
  %28 = load i64, i64* %7, align 8
  %29 = load i64, i64* @FILE_MAX_SIZE, align 8
  %30 = icmp sgt i64 %28, %29
  br i1 %30, label %31, label %35

31:                                               ; preds = %27
  %32 = load i8*, i8** @EFBIG, align 8
  %33 = load %struct._reent*, %struct._reent** %5, align 8
  %34 = getelementptr inbounds %struct._reent, %struct._reent* %33, i32 0, i32 0
  store i8* %32, i8** %34, align 8
  store i32 -1, i32* %4, align 4
  br label %246

35:                                               ; preds = %27
  %36 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %37 = icmp ne %struct.TYPE_10__* %36, null
  br i1 %37, label %38, label %43

38:                                               ; preds = %35
  %39 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %40 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %39, i32 0, i32 9
  %41 = load i32, i32* %40, align 4
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %47, label %43

43:                                               ; preds = %38, %35
  %44 = load i8*, i8** @EBADF, align 8
  %45 = load %struct._reent*, %struct._reent** %5, align 8
  %46 = getelementptr inbounds %struct._reent, %struct._reent* %45, i32 0, i32 0
  store i8* %44, i8** %46, align 8
  store i32 -1, i32* %4, align 4
  br label %246

47:                                               ; preds = %38
  %48 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %49 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %48, i32 0, i32 8
  %50 = load i32, i32* %49, align 8
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %56, label %52

52:                                               ; preds = %47
  %53 = load i8*, i8** @EINVAL, align 8
  %54 = load %struct._reent*, %struct._reent** %5, align 8
  %55 = getelementptr inbounds %struct._reent, %struct._reent* %54, i32 0, i32 0
  store i8* %53, i8** %55, align 8
  store i32 -1, i32* %4, align 4
  br label %246

56:                                               ; preds = %47
  %57 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %58 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %57, i32 0, i32 7
  %59 = load %struct.TYPE_9__*, %struct.TYPE_9__** %58, align 8
  store %struct.TYPE_9__* %59, %struct.TYPE_9__** %9, align 8
  %60 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %61 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %60, i32 0, i32 3
  %62 = call i32 @_FAT_lock(i32* %61)
  %63 = load i32, i32* %11, align 4
  %64 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %65 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %64, i32 0, i32 0
  %66 = load i32, i32* %65, align 8
  %67 = icmp sgt i32 %63, %66
  br i1 %67, label %68, label %143

68:                                               ; preds = %56
  %69 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %70 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %69, i32 0, i32 1
  %71 = load i64, i64* %70, align 8
  %72 = load i64, i64* @CLUSTER_FREE, align 8
  %73 = icmp eq i64 %71, %72
  br i1 %73, label %74, label %107

74:                                               ; preds = %68
  %75 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %76 = load i64, i64* @CLUSTER_FREE, align 8
  %77 = call i32 @_FAT_fat_linkFreeCluster(%struct.TYPE_9__* %75, i64 %76)
  store i32 %77, i32* %14, align 4
  %78 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %79 = load i32, i32* %14, align 4
  %80 = call i32 @_FAT_fat_isValidCluster(%struct.TYPE_9__* %78, i32 %79)
  %81 = icmp ne i32 %80, 0
  br i1 %81, label %89, label %82

82:                                               ; preds = %74
  %83 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %84 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %83, i32 0, i32 3
  %85 = call i32 @_FAT_unlock(i32* %84)
  %86 = load i8*, i8** @ENOSPC, align 8
  %87 = load %struct._reent*, %struct._reent** %5, align 8
  %88 = getelementptr inbounds %struct._reent, %struct._reent* %87, i32 0, i32 0
  store i8* %86, i8** %88, align 8
  store i32 -1, i32* %4, align 4
  br label %246

89:                                               ; preds = %74
  %90 = load i32, i32* %14, align 4
  %91 = sext i32 %90 to i64
  %92 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %93 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %92, i32 0, i32 1
  store i64 %91, i64* %93, align 8
  %94 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %95 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %94, i32 0, i32 1
  %96 = load i64, i64* %95, align 8
  %97 = trunc i64 %96 to i32
  %98 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %99 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %98, i32 0, i32 6
  %100 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %99, i32 0, i32 0
  store i32 %97, i32* %100, align 8
  %101 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %102 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %101, i32 0, i32 6
  %103 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %102, i32 0, i32 1
  store i32 0, i32* %103, align 4
  %104 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %105 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %104, i32 0, i32 6
  %106 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %105, i32 0, i32 2
  store i32 0, i32* %106, align 8
  br label %107

107:                                              ; preds = %89, %68
  %108 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %109 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %108, i32 0, i32 6
  %110 = bitcast %struct.TYPE_11__* %12 to i8*
  %111 = bitcast %struct.TYPE_11__* %109 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %110, i8* align 8 %111, i64 12, i1 false)
  %112 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %113 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %112, i32 0, i32 2
  %114 = load i32, i32* %113, align 8
  store i32 %114, i32* %13, align 4
  %115 = load i32, i32* %11, align 4
  %116 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %117 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %116, i32 0, i32 2
  store i32 %115, i32* %117, align 8
  %118 = load %struct._reent*, %struct._reent** %5, align 8
  %119 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %120 = call i32 @_FAT_file_extend_r(%struct._reent* %118, %struct.TYPE_10__* %119)
  %121 = icmp ne i32 %120, 0
  br i1 %121, label %123, label %122

122:                                              ; preds = %107
  store i32 -1, i32* %10, align 4
  br label %123

123:                                              ; preds = %122, %107
  %124 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %125 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %124, i32 0, i32 5
  %126 = load i64, i64* %125, align 8
  %127 = icmp ne i64 %126, 0
  br i1 %127, label %128, label %135

128:                                              ; preds = %123
  %129 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %130 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %129, i32 0, i32 4
  %131 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %132 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %131, i32 0, i32 6
  %133 = bitcast %struct.TYPE_11__* %130 to i8*
  %134 = bitcast %struct.TYPE_11__* %132 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %133, i8* align 8 %134, i64 12, i1 false)
  br label %135

135:                                              ; preds = %128, %123
  %136 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %137 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %136, i32 0, i32 6
  %138 = bitcast %struct.TYPE_11__* %137 to i8*
  %139 = bitcast %struct.TYPE_11__* %12 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %138, i8* align 4 %139, i64 12, i1 false)
  %140 = load i32, i32* %13, align 4
  %141 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %142 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %141, i32 0, i32 2
  store i32 %140, i32* %142, align 8
  br label %236

143:                                              ; preds = %56
  %144 = load i32, i32* %11, align 4
  %145 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %146 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %145, i32 0, i32 0
  %147 = load i32, i32* %146, align 8
  %148 = icmp slt i32 %144, %147
  br i1 %148, label %149, label %234

149:                                              ; preds = %143
  %150 = load i64, i64* %7, align 8
  %151 = icmp eq i64 %150, 0
  br i1 %151, label %152, label %173

152:                                              ; preds = %149
  %153 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %154 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %155 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %154, i32 0, i32 1
  %156 = load i64, i64* %155, align 8
  %157 = trunc i64 %156 to i32
  %158 = call i32 @_FAT_fat_clearLinks(%struct.TYPE_9__* %153, i32 %157)
  %159 = load i64, i64* @CLUSTER_FREE, align 8
  %160 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %161 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %160, i32 0, i32 1
  store i64 %159, i64* %161, align 8
  %162 = load i64, i64* @CLUSTER_FREE, align 8
  %163 = trunc i64 %162 to i32
  %164 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %165 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %164, i32 0, i32 4
  %166 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %165, i32 0, i32 0
  store i32 %163, i32* %166, align 8
  %167 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %168 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %167, i32 0, i32 4
  %169 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %168, i32 0, i32 1
  store i32 0, i32* %169, align 4
  %170 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %171 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %170, i32 0, i32 4
  %172 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %171, i32 0, i32 2
  store i32 0, i32* %172, align 8
  br label %233

173:                                              ; preds = %149
  %174 = load i32, i32* %11, align 4
  %175 = sub nsw i32 %174, 1
  %176 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %177 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %176, i32 0, i32 0
  %178 = load i32, i32* %177, align 4
  %179 = sdiv i32 %175, %178
  %180 = add nsw i32 %179, 1
  store i32 %180, i32* %15, align 4
  %181 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %182 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %183 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %182, i32 0, i32 1
  %184 = load i64, i64* %183, align 8
  %185 = trunc i64 %184 to i32
  %186 = load i32, i32* %15, align 4
  %187 = call i32 @_FAT_fat_trimChain(%struct.TYPE_9__* %181, i32 %185, i32 %186)
  store i32 %187, i32* %16, align 4
  %188 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %189 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %188, i32 0, i32 5
  %190 = load i64, i64* %189, align 8
  %191 = icmp ne i64 %190, 0
  br i1 %191, label %192, label %232

192:                                              ; preds = %173
  %193 = load i32, i32* %11, align 4
  %194 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %195 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %194, i32 0, i32 1
  %196 = load i32, i32* %195, align 4
  %197 = srem i32 %193, %196
  %198 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %199 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %198, i32 0, i32 4
  %200 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %199, i32 0, i32 2
  store i32 %197, i32* %200, align 8
  %201 = load i32, i32* %11, align 4
  %202 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %203 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %202, i32 0, i32 0
  %204 = load i32, i32* %203, align 4
  %205 = srem i32 %201, %204
  %206 = icmp eq i32 %205, 0
  br i1 %206, label %207, label %214

207:                                              ; preds = %192
  %208 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %209 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %208, i32 0, i32 2
  %210 = load i32, i32* %209, align 4
  %211 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %212 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %211, i32 0, i32 4
  %213 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %212, i32 0, i32 1
  store i32 %210, i32* %213, align 4
  br label %227

214:                                              ; preds = %192
  %215 = load i32, i32* %11, align 4
  %216 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %217 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %216, i32 0, i32 0
  %218 = load i32, i32* %217, align 4
  %219 = srem i32 %215, %218
  %220 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %221 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %220, i32 0, i32 1
  %222 = load i32, i32* %221, align 4
  %223 = sdiv i32 %219, %222
  %224 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %225 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %224, i32 0, i32 4
  %226 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %225, i32 0, i32 1
  store i32 %223, i32* %226, align 4
  br label %227

227:                                              ; preds = %214, %207
  %228 = load i32, i32* %16, align 4
  %229 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %230 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %229, i32 0, i32 4
  %231 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %230, i32 0, i32 0
  store i32 %228, i32* %231, align 8
  br label %232

232:                                              ; preds = %227, %173
  br label %233

233:                                              ; preds = %232, %152
  br label %235

234:                                              ; preds = %143
  br label %235

235:                                              ; preds = %234, %233
  br label %236

236:                                              ; preds = %235, %135
  %237 = load i32, i32* %11, align 4
  %238 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %239 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %238, i32 0, i32 0
  store i32 %237, i32* %239, align 8
  %240 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %241 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %240, i32 0, i32 3
  store i32 1, i32* %241, align 4
  %242 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %243 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %242, i32 0, i32 3
  %244 = call i32 @_FAT_unlock(i32* %243)
  %245 = load i32, i32* %10, align 4
  store i32 %245, i32* %4, align 4
  br label %246

246:                                              ; preds = %236, %82, %52, %43, %31, %23
  %247 = load i32, i32* %4, align 4
  ret i32 %247
}

declare dso_local i32 @_FAT_lock(i32*) #1

declare dso_local i32 @_FAT_fat_linkFreeCluster(%struct.TYPE_9__*, i64) #1

declare dso_local i32 @_FAT_fat_isValidCluster(%struct.TYPE_9__*, i32) #1

declare dso_local i32 @_FAT_unlock(i32*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @_FAT_file_extend_r(%struct._reent*, %struct.TYPE_10__*) #1

declare dso_local i32 @_FAT_fat_clearLinks(%struct.TYPE_9__*, i32) #1

declare dso_local i32 @_FAT_fat_trimChain(%struct.TYPE_9__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
